Add augmentation dots